--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "actors/sunbird-lms-mw"]
 	path = actors/sunbird-lms-mw
 	url = https://github.com/project-sunbird/sunbird-lms-mw.git
-	branch = release-2.6.5
+	branch = loadtest-release-2.6.0
